--- a/_src/css/_layout.css
+++ b/_src/css/_layout.css
@@ -21,3 +21,13 @@
       height: 60px;
     }
 }
+
+#maskLayer {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 5;
+    width: 100vw;
+    height: 1000vh;
+    display: none;
+}
