--- a/_src/css/modules/_itemshow.css
+++ b/_src/css/modules/_itemshow.css
@@ -52,3 +52,19 @@
     opacity: 1;
   }
 }
+
+@-webkit-keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@-moz-keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
