--- a/_src/css/modules/_itemshow.css
+++ b/_src/css/modules/_itemshow.css
@@ -53,17 +53,17 @@
   }
 }
 
-@-webkit-keyframes rotate {
+@-webkit-keyframes 'rotate' {
   100% {
     transform: rotate(360deg);
   }
 }
-@-moz-keyframes rotate {
+@-moz-keyframes 'rotate' {
   100% {
     transform: rotate(360deg);
   }
 }
-@keyframes rotate {
+@keyframes 'rotate' {
   100% {
     transform: rotate(360deg);
   }
