--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-{% if page.audio %}
+{% if page.audio_id %}
 <div class="article-audio">
   <img src="/assets/cd-icon.png" id="music-img">
-  <audio id="audio-id" src="{{ page.audio }}" preload="auto"></audio>
+  <audio id="audio-id" value="{{ page.audio_id }}" src="" preload="auto"></audio>
 </div>
 {% endif %}
 
