--- a/_src/css/_modules.css
+++ b/_src/css/_modules.css
@@ -1,5 +1,6 @@
 @import 'modules/_header.css';
 @import 'modules/_article.css';
+@import 'modules/_about.css';
 @import 'modules/_footer.css';
 @import 'modules/_blocks.css';
 @import 'modules/_btn.css';
