--- a/_src/css/modules/_about.css
+++ b/_src/css/modules/_about.css
@@ -8,13 +8,6 @@
     width: 100%;
 }
 
-@media screen and (max-width: 449px) {
-    .about-content {
-        display: block;
-        width: 100%;
-    }
-}
-
 .card {
   position: relative;
   /*margin: auto;*/
@@ -220,10 +213,41 @@
   }
 }
 
+.rhombusLoader {
+  width: 56px;
+  height: 56px;
+  border: 4px solid rgba(200, 200, 200, 0.34);
+  transform: rotate(45deg);
+  position: relative;
+  margin: auto;
+  top: 40px;
+  &::after,
+  &::before {
+    content: "";
+    display: block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    position: absolute;
+    top: -6px;
+    left: -6px;
+    animation-name: moveParticle;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    background-color: var(--particle-color);
+  }
+  &::after {
+    animation-delay: -2s;
+}
+}
+
 @media screen and (min-width: 734px) {
   .right-desc {
     width: 60%;
     margin-left: 50px;
+  }
+  .rhombusLoader {
+    top: 70px;
   }
 }
 
@@ -235,6 +259,11 @@
 }
 
 @media screen and (max-width: 449px) {
+  .about-content {
+    display: block;
+    width: 100%;
+    margin-bottom: 60px;
+  }
   .right-desc {
     margin: 20px 20px 20px;
   }
