--- a/_includes/player.html
+++ b/_includes/player.html
@@ -47,7 +47,7 @@
         }
     }
     function get_audio_timer() {
-        var left_time = ela.duration - ela.currentTime
+        var left_time = ela.duration != ela.duration ? 0: ela.duration - ela.currentTime
         var mins = Math.floor(left_time / 60);
         var secs = Math.floor(left_time % 60);
         secs = secs < 10 ? "0"+secs : secs;
