audio_preload_with_metadata

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 {% if page.audio_id %}
 <div class="article-audio">
   <img src="/assets/cd-icon.png" id="music-img">
-  <audio id="audio-id" value="{{ page.audio_id }}" src="" preload="auto"></audio>
+  <audio id="audio-id" value="{{ page.audio_id }}" src="" preload="metadata"></audio>
 </div>
 {% endif %}
 
