--- a/_src/css/modules/_about.css
+++ b/_src/css/modules/_about.css
@@ -11,6 +11,7 @@
 .card {
   position: relative;
   /*margin: auto;*/
+  margin-top: 20px;
   top: 0;
   right: 0;
   bottom: 0;
@@ -218,9 +219,11 @@
   height: 56px;
   border: 4px solid rgba(200, 200, 200, 0.34);
   transform: rotate(45deg);
-  position: relative;
-  margin: auto;
-  top: 40px;
+  /*position: relative;*/
+  /*margin: auto;*/
+  /*top: 40px;*/
+  float: right;
+  margin-top: 100px;
   &::after,
   &::before {
     content: "";
@@ -245,9 +248,16 @@
   .right-desc {
     width: 60%;
     margin-left: 50px;
+    &::before {
+        content: "";
+        float: left;
+        border: 1px solid rgba(0,0,0,.04);
+        height: 500px;
+        margin-right: 40px;
+    }
   }
-  .rhombusLoader {
-    top: 70px;
+  .album-concept {
+    left: 40px;
   }
 }
 
@@ -255,7 +265,19 @@
   .right-desc {
     width: 45%;
     margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 100px;
   }
+  .rhombusLoader {
+    float: none;
+    margin: auto;
+    top: 60px;
+    position: relative;
+  }
+  .album-concept {
+    display: none;
+  }
+
 }
 
 @media screen and (max-width: 449px) {
@@ -268,6 +290,10 @@
     margin: 20px 20px 20px;
   }
   .card {
-    margin:auto;
+    display: none;
+    /*margin:auto;*/
+  }
+  .rhombusLoader {
+    display: none;
   }
 }
