--- a/_src/css/modules/_album.css
+++ b/_src/css/modules/_album.css
@@ -79,12 +79,7 @@
     
     width: 250px;
     height: 250px;
-    margin: auto;
-    
-    /*top: 50%;
-    left: 50%;
-    
-    margin: -125px 0 0 -125px;*/
+    margin-bottom: 20px;
     
     /*overflow: hidden;*/
     
