--- a/_includes/album.html
+++ b/_includes/album.html
@@ -1,12 +1,10 @@
 <div class="album-concept">
-    <div style="
-        font-size: 0.7rem;
-        text-align: center;
-        margin-left: 5px;
-    " class="timer-id">00:00</div>
     <div class="cover left"></div>
     <div class="cover right"></div>
     <div class="controls">
+        <div style="font-size: 0.7rem;text-align:center;margin-left:5px;" id="timer-id">
+        00:00
+        </div>
         <span class="fontawesome-music"></span>
         <span id="start-id" class="fontawesome-play"></span>
         <span class="fontawesome-random"></span>
