change_timer_color

--- a/_includes/album.html
+++ b/_includes/album.html
@@ -2,7 +2,7 @@
     <div class="cover left"></div>
     <div class="cover right"></div>
     <div class="controls">
-        <div style="font-size: 0.7rem;text-align:center;margin-left:5px;" id="timer-id">
+        <div style="font-size:0.7rem;text-align:center;margin-left:5px;color: hsla(0,0%,39%,.2);" id="timer-id">
         00:00
         </div>
         <span class="fontawesome-music"></span>
