--- a/_includes/album.html
+++ b/_includes/album.html
@@ -24,7 +24,7 @@
                 els = document.getElementById("start-id"),
                 elt = document.getElementById("timer-id"),
                 eln = document.getElementById("next-id"),
-                playlist = JSON.parse(window.localStorage.getItem('playlist'));
+                playlist = JSON.parse(window.sessionStorage.getItem('playlist'));
 
             // Unfold once it's ready
             document.querySelector('.cover.right').classList.add('unfold');
@@ -46,7 +46,7 @@
                     var index = Math.floor(Math.random() * m_num);
                     var next_url = playlist[index];
                     ela.setAttribute("src", next_url);
-                    window.localStorage.setItem('current', next_url);
+                    window.sessionStorage.setItem('current', next_url);
                 }
                 else {
                     set_playlist();
@@ -56,13 +56,13 @@
                 var item = ela.getAttribute("src");
                 if (playlist != null ) {
                     playlist.indexOf(item) === -1? playlist.push(item):null;
-                    window.localStorage.setItem('current', item);
-                    window.localStorage.setItem('playlist', JSON.stringify(playlist));
+                    window.sessionStorage.setItem('current', item);
+                    window.sessionStorage.setItem('playlist', JSON.stringify(playlist));
                 }
                 else {
                     playlist = [item];
-                    window.localStorage.setItem('current', item);
-                    window.localStorage.setItem('playlist', JSON.stringify(playlist));
+                    window.sessionStorage.setItem('current', item);
+                    window.sessionStorage.setItem('playlist', JSON.stringify(playlist));
                 }
             }
             function audio_play() {
