--- a/_src/css/modules/_album.css
+++ b/_src/css/modules/_album.css
@@ -191,6 +191,33 @@
 
 }
 
+#lyricer {
+    font-size: 0.5rem;
+    font-family: Lora,Georgia,sans-serif;
+    text-shadow: 0 0 1px #EEEEEE;
+    color: #666666;
+    overflow: hidden;
+    display: none;
+}
+
+#lyricer ul {
+    list-style-type: none;
+    margin: 5px;
+    /*padding: 5px;*/
+}
+
+#lyricer ul li {
+    overflow: auto;
+}
+
+#lyricer ul li:hover {
+    color: #428bca;
+}
+
+#lyricer .lyricer-current-line {
+    color: #fff;
+    text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #fff, 0 0 4px #ff2d95, 0 0 6px #ff2d95, 0 0 8px #ff2d95, 0 0 10px #ff2d95, 0 0 12px #ff2d95;
+}
 
 @-webkit-keyframes unfold {
                 
