--- a/_src/css/modules/_album.css
+++ b/_src/css/modules/_album.css
@@ -217,7 +217,7 @@
 
 #lyricer .lyricer-current-line {
     color: #fff;
-    text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #fff, 0 0 4px #ff2d95, 0 0 6px #ff2d95, 0 0 8px #ff2d95, 0 0 10px #ff2d95, 0 0 12px #ff2d95;
+    text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #fff, 0 0 4px #ff2d95, 0 0 6px #ff2d95, 0 0 8px #ff2d95, 0 0 10px #ff2d95, 0 0 12px #ff2d95
 }
 
 @-webkit-keyframes unfold {
