fet:add_pikachu

--- a/_src/css/_modules.css
+++ b/_src/css/_modules.css
@@ -8,3 +8,4 @@
 @import 'modules/_backtop.css';
 @import 'modules/_archive.css';
 @import 'modules/_itemshow.css';
+/*@import 'modules/_pikachu.css';*/
