--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,5 +4,6 @@ layout: default
 
 <div class="inner">
   <h2 class="info_title">{{ page.title }}</h2>
+  {% include equaliser.html %}
 </div>
 {{ content }}
