--- a/_src/css/modules/_equaliser.css
+++ b/_src/css/modules/_equaliser.css
@@ -30,22 +30,32 @@
 
 .equaliser-column:nth-child(1) .colour-bar {
     animation: color-bar 2s 1s ease-out alternate infinite;
+    -webkit-animation: color-bar 2s 1s ease-out alternate infinite;
+       -moz-animation: color-bar 2s 1s ease-out alternate infinite;
 }
 
 .equaliser-column:nth-child(2) .colour-bar {
     animation: color-bar 2s 0.5s ease-out alternate infinite;
+    -webkit-animation: color-bar 2s 0.5s ease-out alternate infinite;
+       -moz-animation: color-bar 2s 0.5s ease-out alternate infinite;
 }
 
 .equaliser-column:nth-child(3) .colour-bar {
     animation: color-bar 2s 1.5s ease-out alternate infinite;
+    -webkit-animation: color-bar 2s 1.5s ease-out alternate infinite;
+       -moz-animation: color-bar 2s 1.5s ease-out alternate infinite;
 }
 
 .equaliser-column:nth-child(4) .colour-bar {
     animation: color-bar 2s 0.25s ease-out alternate infinite;
+    -webkit-animation: color-bar 2s 0.25s ease-out alternate infinite;
+       -moz-animation: color-bar 2s 0.25s ease-out alternate infinite;
 }
 
 .equaliser-column:nth-child(5) .colour-bar {
     animation: color-bar 2s 2s ease-out alternate infinite;
+    -webkit-animation: color-bar 2s 2s ease-out alternate infinite;
+       -moz-animation: color-bar 2s 2s ease-out alternate infinite;
 }
 
 .equaliser-column:last-child {
@@ -53,6 +63,122 @@
 }
 
 @keyframes color-bar {
+    0% {
+        height: 1px;
+        background: #999797;
+    }
+
+    10% {
+        height: 3px;
+        background: #999797;
+    }
+
+    20% {
+        height: 5px;
+        background: #999797;
+    }
+
+    30% {
+        height: 2px;
+        background: #999797;
+    }
+
+    40% {
+        height: 7px;
+        background: #999797;
+    }
+
+    50% {
+        height: 9px;
+        background: #999797;
+    }
+
+    60% {
+        height: 3px;
+        background: #999797;
+    }
+
+    70% {
+        height: 8px;
+        background: #999797;
+    }
+
+    80% {
+        height: 5px;
+        background: #999797;
+    }
+
+    90% {
+        height: 3px;
+        background: #999797;
+    }
+
+    100% {
+        height: 1px;
+        background: #999797;
+    }
+
+}
+
+@-webkit-keyframes color-bar {
+    0% {
+        height: 1px;
+        background: #999797;
+    }
+
+    10% {
+        height: 3px;
+        background: #999797;
+    }
+
+    20% {
+        height: 5px;
+        background: #999797;
+    }
+
+    30% {
+        height: 2px;
+        background: #999797;
+    }
+
+    40% {
+        height: 7px;
+        background: #999797;
+    }
+
+    50% {
+        height: 9px;
+        background: #999797;
+    }
+
+    60% {
+        height: 3px;
+        background: #999797;
+    }
+
+    70% {
+        height: 8px;
+        background: #999797;
+    }
+
+    80% {
+        height: 5px;
+        background: #999797;
+    }
+
+    90% {
+        height: 3px;
+        background: #999797;
+    }
+
+    100% {
+        height: 1px;
+        background: #999797;
+    }
+
+}
+
+@-moz-keyframes color-bar {
     0% {
         height: 1px;
         background: #999797;
