--- a/_src/css/_global.css
+++ b/_src/css/_global.css
@@ -74,6 +74,7 @@ body {
   font-family: Lora,Georgia,'Source Sans Pro', sans-serif;
   font-size: 0.9rem;
   line-height: 1.6rem;
+  background-color: #f8f8f8;
 
 
 /*  background-image: linear-gradient(rgba(50, 50, 50, .1) 1px, transparent 1px);
