--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,43 +2,35 @@
 layout: default
 ---
 {% if page.audio_id or page.audio %}
-<div class="article-audio">
-  <img src="/assets/cd-icon.png" id="music-img">
-  <audio id="audio-id" value="{{ page.audio_id }}" {% if page.audio %} src={{ page.audio }} {% else %} src="" {% endif %} preload="metadata"></audio>
-</div>
-{% endif %}
-
-<article class="article">
-  <h2 class="article__title article__title--single">{{ page.title }}</h2>
-  <time class="article__date" datetime="{{ page.date | date: "%Y-%m-%d" }}">{% if page.author %}By {{ page.author}} on {% endif %}{{ page.date | date: "%b %d, %Y" }}</time>
-  {% if page.cover %}
-    <div class="article__cover">
-      <img src="{{ page.cover }}">
+    <div class="article-audio">
+        <img src="/assets/cd-icon.png" id="music-img">
+        <audio id="audio-id" value="{{ page.audio_id }}" {% if page.audio %} src={{ page.audio }} {% else %} src="" {% endif %} preload="metadata"></audio>
     </div>
-  {% endif %}
-  {{ content }}
-  {% if page.tail %}
-    <div class="article__tail">{{ page.tail }}</div>
-  {% endif %}
+{% endif %}
+<article class="article">
+    <h2 class="article__title article__title--single">{{ page.title }}</h2>
+    <time class="article__date" datetime="{{ page.date | date: "%Y-%m-%d" }}">{% if page.author %}By {{ page.author}} on {% endif %}{{ page.date | date: "%b %d, %Y" }}</time>
+    {% if page.cover %}
+        <div class="article__cover">
+            <img src="{{ page.cover }}">
+        </div>
+    {% endif %}
+    {{ content }}
+    {% if page.tail %}
+        <div class="article__tail">{{ page.tail }}</div>
+    {% endif %}
 </article>
-
 <div class="blocks">
-  <div class="block__item block__item--mr">
-    <a href="https://twitter.com/intent/tweet?text={{ page.title }}&amp;url={{ site.url }}{{ page.url }}&amp;via={{ site.twitter_username }}">
-      <svg class="btn__icon" viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <title>Twitter Icon</title>
-        <path d="M14.4 4.2C14.4 4.4 14.4 4.5 14.4 4.7 14.4 9 11.1 14 5 14 3.2 14 1.5 13.5 0 12.5 0.3 12.6 0.5 12.6 0.8 12.6 2.3 12.6 3.7 12 4.9 11.2 3.4 11.1 2.2 10.2 1.8 8.9 2 8.9 2.2 8.9 2.4 8.9 2.7 8.9 3 8.9 3.3 8.8 1.8 8.5 0.6 7.2 0.6 5.6L0.6 5.6C1.1 5.8 1.6 6 2.1 6 1.2 5.4 0.7 4.4 0.7 3.2 0.7 2.6 0.8 2.1 1.1 1.6 2.7 3.6 5.2 4.9 7.9 5 7.8 4.8 7.8 4.5 7.8 4.3 7.8 2.5 9.3 1 11.1 1 12 1 12.9 1.4 13.5 2 14.2 1.9 14.9 1.6 15.6 1.2 15.3 2 14.8 2.6 14.1 3.1 14.8 3 15.4 2.8 16 2.5 15.6 3.2 15 3.8 14.4 4.2L14.4 4.2Z"/>
-      </svg>
-    </a>
-  </div>
-  <div class="block__item">
-    <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}">
-      <svg class="btn__icon" viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <title>Facebook Icon</title>
-        <path d="M9.5 3L12 3 12 0 9.5 0C7.6 0 6 1.6 6 3.5L6 5 4 5 4 8 6 8 6 16 9 16 9 8 11.5 8 12 5 9 5 9 3.5C9 3.2 9.2 3 9.5 3L9.5 3Z"/>
-      </svg>
-    </a>
-  </div>
+    <div class="block__item block__item--mr">
+        <a href="https://twitter.com/intent/tweet?text={{ page.title }}&amp;url={{ site.url }}{{ page.url }}&amp;via={{ site.twitter_username }}">
+            <span class="fontawesome-twitter"></span>
+        </a>
+    </div>
+    <div class="block__item">
+        <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}">
+            <span class="fontawesome-facebook"></span>
+        </a>
+    </div>
 </div>
 <hr>
 
