change_fontawesome_url

--- a/_src/css/modules/_album.css
+++ b/_src/css/modules/_album.css
@@ -1,4 +1,4 @@
-@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/fontawesome.min.css);
 
 
 [class*="fontawesome-"]:before {
