--- a/_src/css/modules/_album.css
+++ b/_src/css/modules/_album.css
@@ -1,4 +1,4 @@
-@import url(https://cdn.bootcss.com/font-awesome/5.13.0/css/fontawesome.min.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/fontawesome.min.css);
 
 
 [class*="fontawesome-"]:before {
